--- a/css/jTree.css
+++ b/css/jTree.css
@@ -14,6 +14,21 @@
 
 .title {
     cursor: pointer;
+    background-image: url('../images/plus.png');
+    background-repeat: no-repeat;
+    background-size: 8px 8px;
+    padding-left: 10px;
+    background-position: 0px 5px;
+}
+
+.expanded
+{
+    background-image: url('../images/minus.png');
+}
+
+.minimized
+{
+    background-image: url('../images/plus.png');
 }
 
 .title:hover {
