--- a/css/jTree.css
+++ b/css/jTree.css
@@ -16,7 +16,7 @@
     cursor: pointer;
     background-image: url('../images/plus.png');
     background-repeat: no-repeat;
-    background-size: 8px 8px;
+    background-size: 5px;
     padding-left: 10px;
     background-position: 0px 5px;
 }
